--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 </head>
-<body style='margin: 0;'>
+<body style='margin: 0; overflow: hidden;'>
     <div id='app' style='width: 100vw; height: 100vh;'>
     </div>
     <script src='out/index.js'></script>
