--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
   <script src="CodeMirror/mode/css/css.js"></script>
   <script src="CodeMirror/mode/htmlmixed/htmlmixed.js"></script>
   <script src="js/FileSaver.min.js"></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    
+    ga('create', 'UA-101423793-2', 'auto');
+    ga('send', 'pageview');
+    
+  </script>
   <style type="text/css">
     .CodeMirror {
       position: relative;
